--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
           }
         }
       </script>
+
+      <!-- font awsome kit link -->
+
+      <script src="https://kit.fontawesome.com/bc2c224793.js" crossorigin="anonymous"></script>
     
 
     <style>
@@ -37,11 +41,57 @@
 </head>
 <body class="font-manrope">
 
-    <header>
+    <header class="container mx-auto">
+
+      <div class="hero ">
+        <div class="hero-content flex-col lg:flex-row">
+         
+          <div>
+            <h1 class="text-7xl font-extrabold">It's good <br>
+              tea time at The <br>
+             Tea House</h1>
+            <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <button class="btn btn-primary ">Explore More</button>
+          </div>
+          <div>
+            <img src="images/banner.png" class="max-w-sm " />
+
+
+            <!-- Rating section -->
+            <div class="flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 -mt-20">
+              <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+              <div>
+                <h3>5.00</h3>
+                <p>Trust Pilot Ratings</p>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </header>
 
-    <main>
+    <main class="container mx-auto">
+
+      <section class="text-center my-24">
+        <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+        <p class="lg:max-w-3xl mx-auto mb-10" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+        <!-- featured tea card container -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+          <!-- First card -->
+          <div class="card w-96 p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+            <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+
+            </div>
+          </div>
+
+        </div>
+      </section>
 
     </main>
 
