--- a/index.html
+++ b/index.html
@@ -79,10 +79,37 @@
         <p class="lg:max-w-3xl mx-auto mb-10" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
 
         <!-- featured tea card container -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+        <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
           <!-- First card -->
-          <div class="card w-96 p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+          <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
             <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+
+            </div>
+          </div>
+          <!-- 2nd card -->
+          <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+            <figure><img src="images/tea-2.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+
+            </div>
+          </div>
+          <!-- 3rd card -->
+          <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+            <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+
+            </div>
+          </div>
+          <!-- 4th card -->
+          <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+            <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
             <div class="card-body">
               <h2 class="text-2xl font-bold">Milk Tea</h2>
               <p>Creamer could be replaced by fresh milk</p>
@@ -91,6 +118,37 @@
           </div>
 
         </div>
+      </section>
+
+      <!-- great tea fresh tea section -->
+      <section class="my-24 flex flex-col lg:flex-row gap-12">
+        <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+          <div class="rounded-xl h-36 bg-gradient-to-r from-red-200 to-amber-200"></div>
+          <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
+            <img src="images/fresh-1.png" alt="">
+          </div>
+          <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
+            <img src="images/fresh-2.png" alt="">
+          </div>
+          <div class="rounded-xl h-36 bg-gradient-to-r from-red-200 to-amber-200"></div>
+
+        </div>
+
+        <!-- text section -->
+        <div class="space-y-5 flex-1">
+          <h2 class="text-5xl font-extrabold">Great Tea, Freshly <br>
+             Presented</h2>
+
+             <p>
+              The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+             </p>
+
+             <h4 class="text-xl font-extrabold mt-8">Unique Taste</h4>
+             <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+             <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
+             <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
+
       </section>
 
     </main>
