--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
           <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
             <img src="images/fresh-1.png" alt="">
           </div>
-          <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
+          <div class="row-span-2 bg-[#5776391A] rounded-lg px-8 py-12 flex justify-center items-center">
             <img src="images/fresh-2.png" alt="">
           </div>
-          <div class="rounded-xl h-36 bg-gradient-to-r from-red-200 to-amber-200"></div>
+          <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF]"></div>
 
         </div>
 
@@ -149,6 +149,32 @@
              <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
         </div>
 
+      </section>
+
+      <!-- Meet Our Super Clients -->
+
+      <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00]  px-16 py-24">
+        <div class="space-y-5">
+          <h2 class="text-5xl	font-extrabold text-white">
+            Meet Our Super
+             <br> 
+             Clients</h2>
+             <p class="text-white">
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+             </p>
+             <button class="btn btn-primary">Show All</button>
+        </div>
+
+        <!-- review section -->
+        <div>
+          <!--  -->
+          <div class="relative p-10 rounded-lg bg-white">
+            <img class="absolute  -top-5  -left-5" src="images/client.png" alt="">
+            <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h4 class="font-bold mt-5">Ilham Yuda</h4>
+            <p class="font-medium">Businessman</p>
+          </div>
+        </div>
       </section>
 
     </main>
